--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "drizzle-orm": "^0.45.1"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.31.9"
+    "autoprefixer": "^10.4.24",
+    "drizzle-kit": "^0.31.9",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.2.1"
   },
   "scripts": {
     "db:generate": "drizzle-kit generate",
