feat(sprint-3): shareable polls, live results, expiry, dedup votes, error states
s3-duplicate-vote-block: server-side IP check blocks repeat votes (409)
s3-poll-expiry: expiresAt schema field, creation dropdown (1h/24h/7d/never),
  vote guard returns 410 on expired polls, expiry badge + expired banner in UI
s3-shareable-link: copy-to-clipboard share button with clipboard API + execCommand fallback
s3-live-results: auto-refresh every 10s after voting with animated Live indicator
s3-error-states: loading skeleton, 404 card, network error card with Retry button
build: drizzle-kit push runs before next build so Neon column is auto-migrated on deploy

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "dev": "next dev",
-    "build": "next build",
+    "build": "drizzle-kit push && next build",
     "start": "next start",
     "lint": "next lint"
   }
